--- a/admin.html
+++ b/admin.html
@@ -225,7 +225,7 @@
                                     <i class="fas fa-chart-pie"></i>
                                 </button>
                                 <button class="chart-toggle active" data-chart="doughnut">
-                                    <i class="fas fa-chart-circle"></i>
+                                    <i class="fas fa-circle"></i>
                                 </button>
                             </div>
                         </div>
