--- a/admin.html
+++ b/admin.html
@@ -82,10 +82,10 @@
                     <i class="fas fa-calendar-alt"></i>
                     <span>Events</span>
                 </a>
-                <a href="#analytics" class="nav-item" data-section="analytics">
+                <!-- <a href="#analytics" class="nav-item" data-section="analytics">
                     <i class="fas fa-chart-line"></i>
                     <span>Analytics</span>
-                </a>
+                </a> -->
                 <a href="#payments" class="nav-item" data-section="payments">
                     <i class="fas fa-credit-card"></i>
                     <span>Payments</span>
@@ -393,7 +393,7 @@
                     <h3 class="section-subtitle">Event Management</h3>
                     <div class="management-grid">
                         <button class="management-btn">
-                            <i class="fas fa-bullhorn"></i>
+                            <i class="fas fa-bullhorn" ></i>
                             <span>Send Announcements</span>
                         </button>
                         <button class="management-btn">
@@ -413,7 +413,7 @@
             </section>
 
             <!-- Analytics Section -->
-            <section id="analyticsSection" class="content-section">
+            <!-- <section id="analyticsSection" class="content-section">
                 <div class="analytics-header">
                     <h2 class="analytics-title">Advanced Analytics</h2>
                     <div class="date-range-picker">
@@ -422,42 +422,42 @@
                         <input type="date" id="endDate">
                         <button class="apply-date">Apply</button>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="analytics-grid">
+                <!-- <div class="analytics-grid"> -->
                     <!-- College Distribution -->
-                    <div class="analytics-card">
+                    <!-- <div class="analytics-card">
                         <h3 class="card-title">Top Participating Colleges</h3>
                         <div class="college-chart-container">
                             <canvas id="collegeChart"></canvas>
                         </div>
-                    </div>
+                    </div> -->
 
                     <!-- Payment Methods -->
-                    <div class="analytics-card">
+                    <!-- <div class="analytics-card">
                         <h3 class="card-title">Payment Method Distribution</h3>
                         <div class="payment-stats" id="paymentStats"></div>
-                    </div>
+                    </div> -->
 
                     <!-- Daily Revenue -->
-                    <div class="analytics-card full-width">
+                    <!-- <div class="analytics-card full-width">
                         <h3 class="card-title">Daily Revenue Trend</h3>
                         <canvas id="revenueChart"></canvas>
-                    </div>
+                    </div> -->
 
                     <!-- Year-wise Distribution -->
-                    <div class="analytics-card">
+                    <!-- <div class="analytics-card">
                         <h3 class="card-title">Year-wise Participation</h3>
                         <canvas id="yearChart"></canvas>
-                    </div>
+                    </div> -->
 
                     <!-- Department Analysis -->
-                    <div class="analytics-card">
+                    <!-- <div class="analytics-card">
                         <h3 class="card-title">Department Distribution</h3>
                         <div class="department-list" id="departmentList"></div>
                     </div>
                 </div>
-            </section>
+            </section> -->
 
             <!-- Payments Section -->
             <section id="paymentsSection" class="content-section">
